package smarthome.domain.valueobjects;

import smarthome.ddd.ValueObject;

public enum DeviceStatus implements ValueObject {
    ACTIVE,
    DEACTIVATED
}
